# language-to-mechanics-ir

./: .gitignore  CLAUDE.md  LICENSE  README.md  plan.txt  pyproject.toml  requirements.txt
assets/: peg_in_hole.xml
scripts/: analyze_results.py  run_full_batch.py  run_language_pipeline.py  run_panda_batch.py  run_panda_mujoco.py  run_panda_pipeline.py
src/lang2mech_ir/: __init__.py  auditor.py  ir_schema.py  llm_interface.py  parser.py  pipeline.py  units.py
src/lang2mech_ir/controller/: __init__.py  mpc.py  multi_mpc.py  state.py
src/lang2mech_ir/logging_utils/: __init__.py  metrics.py
src/lang2mech_ir/simulation/: __init__.py  environment.py  mujoco_interface.py  mujoco_runner.py
tests/: test_auditor.py  test_llm_interface.py  test_metrics.py  test_mpc.py  test_mujoco_runner.py  test_parser.py  test_pipeline.py  test_units.py
