[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang2mech-ir"
version = "0.1.0"
description = "Language-to-Mechanics IR compiler with auditing and MPC hooks"
authors = [{name = "Research Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "anthropic>=0.34",
    "osqp>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
